create xdetails sorting option
Adds new option to sort the xtra details that are appended to the
description.
Merges some of Schmell's cleanup.

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -18,5 +18,40 @@
 	<string id="32160">Download Extra Program Details</string>
 	<string id="32169">Add Delay If Extra Downloads Cause Failure</string>
 	<string id="32180">Delay Between http Requests</string>
+	<string id="32200">Extra Details Order</string>
+	<string id="32201">Extra Details Will Be Appended to Program Description in the Order Set Below</string>
+	<string id="32210">1</string>
+	<string id="32211">2</string>
+	<string id="32212">3</string>
+	<string id="32213">4</string>
+	<string id="32214">5</string>
+	<string id="32215">6</string>
+	<string id="32216">7</string>
+	<string id="32217">8</string>
+	<string id="32218">9</string>
+	<string id="32219">10</string>
+	<string id="32220">11</string>
+	<string id="32221">12</string>
+	<string id="32222">13</string>
+	<string id="32223">14</string>
+	<string id="32224">15</string>
+	<string id="32225">16</string>
+	<string id="32226">17</string>
+	<string id="32227">18</string>
+	<string id="32228">19</string>
+	<string id="32229">20</string>
+	<string id="32300">None</string>
+	<string id="32301">BULLET</string>
+	<string id="32302">HYPHEN</string>
+	<string id="32303">Plot Description</string>
+	<string id="32304">New/Live Indicator</string>
+	<string id="32305">HD Indicator</string>
+	<string id="32306">CC Indicator</string>
+	<string id="32307">Season/Episode Number</string>
+	<string id="32308">TV Rating</string>
+	<string id="32309">Original Air Date or Movie Release Year</string>
+	<string id="32310">Program Title</string>
+	<string id="32311">Episode Title</string>
+	<string id="32312">Episode Title in Quotes</string>
+	<string id="32313">Cast</string>
 </strings>
-
