For static separator code
add separator string

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -20,6 +20,7 @@
 	<string id="32180">Delay Between http Requests</string>
 	<string id="32200">Extra Details Order</string>
 	<string id="32201">Extra Details Will Be Appended to Program Description in the Order Set Below</string>
+	<string id="32202">Seperator</string>
 	<string id="32210">1</string>
 	<string id="32211">2</string>
 	<string id="32212">3</string>
