add program type and genres to xdetails

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -56,5 +56,7 @@
 	<string id="32312">Episode Title in Quotes</string>
 	<string id="32313">Cast</string>
 	<string id="32314">Movie Release Year</string>
+	<string id="32315">Show Type</string>
+	<string id="32316">Genres</string>
 	<string id="32320">LINE BREAK</string>
 </strings>
